Findbugs: Fixed or ignored some problems.